--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.18",
