--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DATABASE=freelancer_db
 DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=123456789
+TOKEN_SECRET = yhd56389945r67uy34o678iujhsdcfvbn
+TOKEN-EXPIRE = 7d
