--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.18",
     "sequelize": "^6.21.0",
